--- a/web-app/templates/soundings_old.html
+++ b/web-app/templates/soundings_old.html
@@ -12,67 +12,67 @@
           <div class="col-md">
             <div>
               <div class="btn-group" role="group">
-                <button class="btn btn-success sd"
+                <button class="btn btn-success" id="defaultOpen"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="OAK" onClick="reply_click(this.id)">OAK</button>
-                <button class="btn btn-success sd"
+                  onclick="open_tab(event, 'oak')">OAK</button>
+                <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="REV" onClick="reply_click(this.id)">REV</button>
-                <button class="btn btn-success sd"
+                  onclick="open_tab(event, 'rev')">REV</button>
+                <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="LKN" onClick="reply_click(this.id)">LKN</button>
-                <button class="btn btn-success sd"
+                  onclick="open_tab(event, 'lkn')">LKN</button>
+                <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="SLC" onClick="reply_click(this.id)">SLC</button>
-                <button class="btn btn-success sd"
+                  onclick="open_tab(event, 'slc')">SLC</button>
+                <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="GJT" onClick="reply_click(this.id)">GJT</button>
-                <button class="btn btn-success sd"
+                  onclick="open_tab(event, 'gjt')">GJT</button>
+                <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
-                  id="DNR" onClick="reply_click(this.id)">DNR</button>
-              </div>
-            </div>
-            <br>
-            <div>
-              <div class="btn-group" role="group">
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="VBG" onClick="reply_click(this.id)">VBG</button>
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="EDW" onClick="reply_click(this.id)">EDW</button>
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="DRA" onClick="reply_click(this.id)">DRA</button>
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="FGZ" onClick="reply_click(this.id)">FGZ</button>
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="ABQ" onClick="reply_click(this.id)">ABQ</button>
-                <button class="btn btn-success sd"
-                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
-                  id="AMA" onClick="reply_click(this.id)">AMA</button>
+                  onclick="open_tab(event, 'dnr')">DNR</button>
               </div>
             </div>
             <br>
             <div>
               <div class="btn-group" role="group">
                 <button class="btn btn-success"
-                  style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
-                  id="NKX" onClick="reply_click(this.id)">NKX</button>
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'vbg')">VBG</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'edw')">EDW</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'dra')">DRA</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'fgz')">FGZ</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'abq')">ABQ</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
+                  onclick="open_tab(event, 'ama')">AMA</button>
+              </div>
+            </div>
+            <br>
+            <div>
+              <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
-                  id="TUS" onClick="reply_click(this.id)">TUS</button>
+                  onclick="open_tab(event, 'nkx')">NKX</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
-                  id="EPZ" onClick="reply_click(this.id)">EPZ</button>
+                  onclick="open_tab(event, 'tus')">TUS</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
-                  id="MAF" onClick="reply_click(this.id)">MAF</button>
+                  onclick="open_tab(event, 'epz')">EPZ</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
-                  id="FWD" onClick="reply_click(this.id)">FWD</button>
+                  onclick="open_tab(event, 'maf')">MAF</button>
+                <button class="btn btn-success"
+                  style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
+                  onclick="open_tab(event, 'slidemt')">Slide Mt</button>
               </div>
             </div>
             <br>
@@ -137,27 +137,146 @@
           <div class="card-header">
             <h5 class="card-title" align=center>Sounding Plots</h5>
           </div>
-          <div id="sounding">
-              {{ img|oembed(html=True) }}
+          <div id="rev" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/rev.gif" width="100%"></p>
           </div>
 
+          <div id="oak" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/oak.gif" width="100%"></p>
+          </div>
+
+          <div id="edw" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/edw.gif" width="100%"></p>
+          </div>
+
+          <div id="vbg" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/vbg.gif" width="100%"></p>
+          </div>
+
+          <div id="nkx" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/nkx.gif" width="100%"></p>
+          </div>
+
+          <div id="dra" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/dra.gif" width="100%"></p>
+          </div>
+
+          <div id="abq" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/abq.gif" width="100%"></p>
+          </div>
+
+          <div id="lkn" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/lkn.gif" width="100%"></p>
+          </div>
+
+          <div id="slc" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/slc.gif" width="100%"></p>
+          </div>
+
+          <div id="gjt" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/gjt.gif" width="100%"></p>
+          </div>
+
+          <div id="dnr" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/dnr.gif" width="100%"></p>
+          </div>
+
+          <div id="fgz" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/fgz.gif" width="100%"></p>
+          </div>
+
+          <div id="ama" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/ama.gif" width="100%"></p>
+          </div>
+
+          <div id="tus" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/twc.gif" width="100%"></p>
+          </div>
+
+          <div id="epz" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/epz.gif" width="100%"></p>
+          </div>
+
+          <div id="maf" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/maf.gif" width="100%"></p>
+          </div>
+
+          <div id="925r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_925.gif" width="100%"></p>
+            <h3>925mb - 2500ft - Rawinsonde</h3>
+          </div>
+
+          <div id="850r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_850.gif" width="100%"></p>
+            <h3>850mb - 5000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="700r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_700.gif" width="100%"></p>
+            <h3>700mb - 10000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="500r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_500.gif" width="100%"></p>
+            <h3>500mb - 20000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="300r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_300.gif" width="100%"></p>
+            <h3>300mb - 30000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="250r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_250.gif" width="100%"></p>
+            <h3>250mb - 34000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="200r" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaRAOB_200.gif" width="100%"></p>
+            <h3>200mb - 39000ft - Rawinsonde</h3>
+          </div>
+
+          <div id="925c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_925.gif" width="100%"></p>
+            <h3>925mb - 2500ft - Contours</h3>
+          </div>
+
+          <div id="850c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_850.gif" width="100%"></p>
+            <h3>850mb - 5000ft - Contours</h3>
+          </div>
+
+          <div id="700c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_700.gif" width="100%"></p>
+            <h3>700mb - 10000ft - Contours</h3>
+          </div>
+
+          <div id="500c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_500.gif" width="100%"></p>
+            <h3>500mb - 20000ft - Contours</h3>
+          </div>
+
+          <div id="300c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_300.gif" width="100%"></p>
+            <h3>300mb - 30000ft - Contours</h3>
+          </div>
+
+          <div id="250c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_250.gif" width="100%"></p>
+            <h3>250mb - 34000ft - Contours</h3>
+          </div>
+
+          <div id="200c" class="tabcontent">
+            <p align=center><img src="http://weather.rap.ucar.edu/upper/upaCNTR_200.gif" width="100%"></p>
+            <h3>200mb - 39000ft - Contours</h3>
+          </div>
+
+          <div id="slidemt" class="tabcontent">
+            <p align=center><img src="http://www.wrh.noaa.gov/images/rev/remote/slideT.png" width="100%"></p>
+            <p align=center><img src="http://www.wrh.noaa.gov/images/rev/remote/slideW.png" width="100%"></p>
+          </div>
 
           <script>
-            function reply_click(clicked_id) {
-              $.ajax({
-                  url: "/soundings/update",
-                  type: "GET",
-                  contentType: 'application/json;charset=UTF-8',
-                  data: {
-                      'sid': clicked_id,
-                  },
-                  dataType: "json",
-                  success: function (img) {
-                    document.getElementById("sounding").innerHTML = img;
-                  }
-              });
-            };
-
             function open_tab(evt, Name) {
               var i, tabcontent, tablinks;
               tabcontent = document.getElementsByClassName("tabcontent");
