--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -74,8 +74,7 @@
                         <script>
                             var graphs = {{map_aprs|safe}};
                             Plotly.plot('map_aprs', graphs.data, graphs.layout, {
-                                displayModeBar: false,
-                                responsive: true
+                                displayModeBar: false, responsive: true
                             });
                         </script>
                     </div>
@@ -91,8 +90,7 @@
                         <script>
                             var graphs = {{ plot_speed | safe }};
                             Plotly.plot('plot_speed', graphs.data, graphs.layout, {
-                                displayModeBar: false,
-                                responsive: true
+                                displayModeBar: false, responsive: true
                             });
                         </script>
                     </div>
@@ -108,8 +106,7 @@
                         <script>
                             var graphs = {{ plot_alt | safe }};
                             Plotly.plot('plot_alt', graphs.data, graphs.layout, {
-                                displayModeBar: false,
-                                responsive: true
+                                displayModeBar: false, responsive: true
                             });
                         </script>
                     </div>
@@ -125,8 +122,7 @@
                         <script>
                             var graphs = {{ plot_course | safe }};
                             Plotly.plot('plot_course', graphs.data, graphs.layout, {
-                                displayModeBar: false,
-                                responsive: true
+                                displayModeBar: false, responsive: true
                             });
                         </script>
                     </div>
