--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -75,8 +75,7 @@
                         <script>
                             var graphs = {{ plot | safe }};
                             Plotly.plot('map_awc', graphs.data, graphs.layout, {
-                                displayModeBar: false,
-                                responsive: true
+                                displayModeBar: false, responsive: true
                             });
                         </script>
                     </div>
