--- a/web-app/templates/iot.html
+++ b/web-app/templates/iot.html
@@ -147,8 +147,7 @@
             <script>
               var graphs = {{ plot | safe }};
               Plotly.plot('graph_iot', graphs.data, graphs.layout, {
-                displayModeBar: false,
-                responsive: true
+                displayModeBar: false, responsive: true
               });
             </script>
           </div>
