--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -110,14 +110,8 @@
                     <div class="card-header">
                         <h5 class="card-title" align=center>Radar</h5>
                     </div>
-                    <div class="mapwx" id="map_wx">
-                        <script>
-                            var graphs = {{ wxmap | safe }};
-                            Plotly.plot('map_wx', graphs.data, graphs.layout, {
-                                displayModeBar: false, responsive: true
-                            });
-                        </script>
-                    </div>
+                    <p align=center><img width="100%" src="http://www.findu.com/cgi-bin/radar-find.cgi?call=KK6GPV-10">
+                    </p>
                 </div>
             </div>
         </div>
