edit app for viewing gfs files

--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -80,25 +80,25 @@
               <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '925r')">925</button>
+                  id="925" onClick="reply_click(this.id)">925</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '850r')">850</button>
+                  id="850" onClick="reply_click(this.id)">850</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '700r')">700</button>
+                  id="700" onClick="reply_click(this.id)">700</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '500r')">500</button>
+                  id="500" onClick="reply_click(this.id)">500</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '300r')">300</button>
+                  id="300" onClick="reply_click(this.id)">300</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '250r')">250</button>
+                  id="250" onClick="reply_click(this.id)">250</button>
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
-                  onclick="open_tab(event, '200r')">200</button>
+                  id="200" onClick="reply_click(this.id)">200</button>
               </div>
             </div>
             <br>
