--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -10,7 +10,7 @@
           </div>
           <br>
           <div class="col-md">
-            <div>
+            <div align=center>
               <div class="btn-group" role="group">
                 <button class="btn btn-success sd"
                   style="--button-color: #ffffff; --button-background-color: #f4416e; --button-background-color-dark: #992341;"
@@ -32,8 +32,8 @@
                   id="DNR" onClick="reply_click(this.id)">DNR</button>
               </div>
             </div>
-            <br>
-            <div>
+            <!-- <br> -->
+            <div align=center>
               <div class="btn-group" role="group">
                 <button class="btn btn-success sd"
                   style="--button-color: #ffffff; --button-background-color: #f45e41; --button-background-color-dark: #aa351e;"
@@ -55,8 +55,8 @@
                   id="AMA" onClick="reply_click(this.id)">AMA</button>
               </div>
             </div>
-            <br>
-            <div>
+            <!-- <br> -->
+            <div align=center>
               <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #f4af41; --button-background-color-dark: #af761a;"
@@ -75,8 +75,8 @@
                   id="FWD" onClick="reply_click(this.id)">FWD</button>
               </div>
             </div>
-            <br>
-            <div>
+            <!-- <br> -->
+            <div align=center>
               <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #c7f441; --button-background-color-dark: #81a318;"
@@ -101,8 +101,8 @@
                   id="200" onClick="reply_click(this.id)">200</button>
               </div>
             </div>
-            <br>
-            <div>
+            <!-- <br> -->
+            <div align=center>
               <div class="btn-group" role="group">
                 <button class="btn btn-success"
                   style="--button-color: #ffffff; --button-background-color: #2eb8a6; --button-background-color-dark: #1d8876;"
@@ -128,16 +128,16 @@
               </div>
             </div>
             <br>
-            <div>
+            <!-- <div>
               <p align=center><img src="static/images/imap_skewt.png" width="100%"></p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="card">
           <div class="card-header">
             <h5 class="card-title" align=center>Sounding Plots</h5>
           </div>
-          <div id="sounding">
+          <div align=center id="sounding">
               {{ img|oembed(html=True) }}
           </div>
 
