--- a/web-app/templates/soundings.html
+++ b/web-app/templates/soundings.html
@@ -137,7 +137,7 @@
           <div class="card-header">
             <h5 class="card-title" align=center>Sounding Plots</h5>
           </div>
-          <div align=center id="sounding">
+          <div id="sounding">
               {{ img|oembed(html=True) }}
           </div>
 
